--- a/{{cookiecutter.project_name}}/NetCore/OF.WebShell/Dockerfile
+++ b/{{cookiecutter.project_name}}/NetCore/OF.WebShell/Dockerfile
@@ -1,6 +1,6 @@
 FROM mcr.microsoft.com/dotnet/core/aspnet:2.2-stretch-slim AS base
 WORKDIR /app
-COPY ./bin/Release/netcoreapp2.2/publish /app
+COPY /OF.WebShell /app
 EXPOSE 80
 ENTRYPOINT ["dotnet", "OF.WebShell.dll"]
 
