--- a/{{cookiecutter.project_name}}/NetCore/Application/OF.{{cookiecutter.project_name}}/OF.{{cookiecutter.project_name}}.BLL/OF.{{cookiecutter.project_name}}.BLL.csproj
+++ b/{{cookiecutter.project_name}}/NetCore/Application/OF.{{cookiecutter.project_name}}/OF.{{cookiecutter.project_name}}.BLL/OF.{{cookiecutter.project_name}}.BLL.csproj
@@ -1,10 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup Label="Globals">
-    <SccProjectName></SccProjectName>
-    <SccProvider></SccProvider>
-    <SccAuxPath></SccAuxPath>
-    <SccLocalPath></SccLocalPath>
+    <SccProjectName>SAK</SccProjectName>
+    <SccProvider>SAK</SccProvider>
+    <SccAuxPath>SAK</SccAuxPath>
+    <SccLocalPath>SAK</SccLocalPath>
   </PropertyGroup>
 
   <PropertyGroup>
@@ -12,10 +12,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Ourway.OF.Sys" Version="0.8.0" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <ProjectReference Include="..\..\..\OF.Core\OF.Core.csproj" />
+    <ProjectReference Include="..\..\OF.Sys\OF.Sys\OF.Sys.csproj" />
     <ProjectReference Include="..\OF.{{cookiecutter.project_name}}\OF.{{cookiecutter.project_name}}.csproj" />
   </ItemGroup>
 
