--- a/{{cookiecutter.project_name}}/NetCore/OF.WebShell/appsettings.json
+++ b/{{cookiecutter.project_name}}/NetCore/OF.WebShell/appsettings.json
@@ -6,6 +6,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "connectionString": "Server=.;Initial Catalog=OFCore;User ID=sa;Password=123456"
+    "redisconnectionString": "k8s.chenyinxin.com:31087",
+    "connectionString": "Server=wow-pd-e01.chinacloudapp.cn;Initial Catalog=OFCoreData;User ID=sa;Password=NBhF2016"
   }
 }
