--- a/{{cookiecutter.project_name}}/NetCore/OF.WebShell/OF.WebShell.csproj
+++ b/{{cookiecutter.project_name}}/NetCore/OF.WebShell/OF.WebShell.csproj
@@ -16,15 +16,15 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Application\OF.Sys\OF.Sys.BLL\OF.Sys.BLL.csproj" />
-    <ProjectReference Include="..\Application\OF.Sys\OF.Sys.Web\OF.Sys.Web.csproj" />
-    <ProjectReference Include="..\Application\OF.Sys\OF.Sys\OF.Sys.csproj" />
     <ProjectReference Include="..\Application\OF.{{cookiecutter.project_name}}\OF.{{cookiecutter.project_name}}.BLL\OF.{{cookiecutter.project_name}}.BLL.csproj" />
     <ProjectReference Include="..\Application\OF.{{cookiecutter.project_name}}\OF.{{cookiecutter.project_name}}.Web\OF.{{cookiecutter.project_name}}.Web.csproj" />
-    <ProjectReference Include="..\Application\OF.{{cookiecutter.project_name}}\OF.{{cookiecutter.project_name}}\OF.{{cookiecutter.project_name}}.csproj" />
-    <ProjectReference Include="..\OF.Core\OF.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="OF.Sys.BLL" Version="0.8.0" />
+    <PackageReference Include="OF.Sys.Web" Version="0.8.0" />
+  </ItemGroup>
+  
   <ItemGroup>
     <Content Update="appsettings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
