--- a/{{cookiecutter.project_name}}/NetCore/OF.WebShell/appsettings.json
+++ b/{{cookiecutter.project_name}}/NetCore/OF.WebShell/appsettings.json
@@ -7,6 +7,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "redisconnectionString": "k8s.chenyinxin.com:31087",
-    "connectionString": "Server=wow-pd-e01.chinacloudapp.cn;Initial Catalog=OFCoreData;User ID=sa;Password=NBhF2016"
+    "connectionString": "Server=.;Initial Catalog=OFCoreData;User ID=sa;Password=NBhF2016"
   }
 }
