--- a/{{cookiecutter.project_name}}/NetCore/OF.WebShell/Properties/launchSettings.json
+++ b/{{cookiecutter.project_name}}/NetCore/OF.WebShell/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "ts/test/urllist",
+      "launchUrl": "{{cookiecutter.project_name}}/test/urllist",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
