--- a/{{cookiecutter.project_name}}/NetCore/OF.WebShell/appsettings.json
+++ b/{{cookiecutter.project_name}}/NetCore/OF.WebShell/appsettings.json
@@ -5,8 +5,10 @@
     }
   },
   "AllowedHosts": "*",
+  "DataBaseType": "SqlServer",
+  "EnableRedisCache": "false",
   "ConnectionStrings": {
-    "redisconnectionString": "k8s.chenyinxin.com:31087",
-    "connectionString": "Server=.;Initial Catalog=OFCoreData;User ID=sa;Password=p@ssw0rd@123"
+    "RedisConnectionString": "k8s.chenyinxin.com:31087",
+    "DataBaseConnectionString": "Server=.;Initial Catalog=OFCoreData;User ID=sa;Password=p@ssw0rd@123"
   }
 }
