--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@
 /{{cookiecutter.project_name}}/NetCore/Application/OF.{{cookiecutter.project_name}}/OF.{{cookiecutter.project_name}}/obj
 /{{cookiecutter.project_name}}/NetCore/Application/OF.{{cookiecutter.project_name}}/OF.{{cookiecutter.project_name}}.BLL/obj
 /{{cookiecutter.project_name}}/NetCore/Application/OF.{{cookiecutter.project_name}}/OF.{{cookiecutter.project_name}}.Web/obj
+/{{cookiecutter.project_name}}/NetCore/OF.vssscc
