--- a/{{cookiecutter.project_name}}/NetCore/OF.WebShell/appsettings.json
+++ b/{{cookiecutter.project_name}}/NetCore/OF.WebShell/appsettings.json
@@ -9,6 +9,6 @@
   "EnableRedisCache": "false",
   "ConnectionStrings": {
     "RedisConnectionString": "k8s.chenyinxin.com:31087",
-    "DataBaseConnectionString": "Server=.;Initial Catalog=OFCoreData;User ID=sa;Password=p@ssw0rd@123"
+    "DataBaseConnectionString": "Server=.;Initial Catalog={{cookiecutter.project_name}};User ID=sa;Password=p@ssw0rd@123"
   }
 }
