--- a/{{cookiecutter.project_name}}/NetCore/OF.WebShell/Properties/launchSettings.json
+++ b/{{cookiecutter.project_name}}/NetCore/OF.WebShell/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:5000",
+      "applicationUrl": "http://localhost:5002",
       "sslPort": 0
     }
   },
@@ -12,7 +12,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "{{cookiecutter.project_name}}/test/urllist",
+      "launchUrl": "{{cookiecutter.project_name}}/test/index",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
