--- a/{{cookiecutter.project_name}}/NetCore/OF.WebShell/appsettings.json
+++ b/{{cookiecutter.project_name}}/NetCore/OF.WebShell/appsettings.json
@@ -5,6 +5,7 @@
     }
   },
   "AllowedHosts": "*",
+  "AuthenticationType": "Jwt",//Jwt|Windows
   "DataBaseType": "SqlServer",
   "EnableRedisCache": "false",
   "ConnectionStrings": {
