--- a/{{cookiecutter.project_name}}/NetCore/Shell/OF.WebShell/appsettings.json
+++ b/{{cookiecutter.project_name}}/NetCore/Shell/OF.WebShell/appsettings.json
@@ -5,7 +5,7 @@
     }
   },
   "AllowedHosts": "*",
-  //"AuthenticationType": "Jwt", //Jwt|Windows
+  "AuthenticationType": "IISAuthProxyService", //Jwt|Windows|IISAuthProxyService
   //"AuthenticationVaildMode": "Database", //Database|LDAP
   //"LDAPSettings": {
   //  "DomainName": "ourway.net",
@@ -15,16 +15,22 @@
   //"EnableRedisCache": "false",
   "ConnectionStrings": {
     //"RedisConnectionString": "k8s.chenyinxin.com:31087",
-    "DataBaseConnectionString": "Server=.;Initial Catalog={{cookiecutter.project_name}};User ID=sa;Password=p@ssw0rd@123"
+    "DataBaseConnectionString": "Server=.;Initial Catalog={{cookiecutter.project_name}};User ID=sa;Password=p@ssw0rd@123",
+    "SSOConnectionString": "Server=.;Initial Catalog=PRJNEW;User ID=sa;Password=p@ssw0rd@123"
   },
   "JwtSettings": {
     "Issuer": "ourway.issuer.framework",
     "Audience": "ourway.audience.framework",
     "SecretKey": "of.jwt.secret.2019"
   },
+  "IISAuthProxySettings": {
+    "AppId": "one",
+    "AppSecret": "abcd1234",
+    "LoginUrl": "http://api.chenyinxin.cn/ad/authorize?appid=one&redirect_uri=%2fad%2fdecrypt%3fappid%3done"
+  },
   "IoCSettings": {
-    "OF.IoC.Many": ".*IEntityMap.*;.*EntityBase.*", //需要多个实现匹配正则
-    "OF.IoC.Ignored": ".*Middleware.*;.*ICRUDServiceBase.*", //忽略服务名称匹配正则
+    "OF.IoC.Many": ".*EntityBase.*", //需要多个实现匹配正则
+    "OF.IoC.Ignored": ".*Middleware.*", //忽略服务名称匹配正则
     "OF.{{cookiecutter.project_name}}.IServices.IIoCTestService": "OF.{{cookiecutter.project_name}}.BLL.IoCTestTwoService"
   }
 }
