--- a/{{cookiecutter.project_name}}/NetCore/Shell/OF.WebShell/appsettings.json
+++ b/{{cookiecutter.project_name}}/NetCore/Shell/OF.WebShell/appsettings.json
@@ -1,11 +1,11 @@
-{
+﻿{
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
     }
   },
   "AllowedHosts": "*",
-  "AuthenticationType": "IISAuthProxyService", //Jwt|Windows|IISAuthProxyService
+  "AuthenticationType": "Jwt", //Jwt|Windows|IISAuthProxyService
   //"AuthenticationVaildMode": "Database", //Database|LDAP
   //"LDAPSettings": {
   //  "DomainName": "ourway.net",
