--- a/{{cookiecutter.project_name}}/NetCore/Shell/OF.WebShell/appsettings.json
+++ b/{{cookiecutter.project_name}}/NetCore/Shell/OF.WebShell/appsettings.json
@@ -1,32 +1,32 @@
-﻿{
+{
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
     }
   },
   "AllowedHosts": "*",
-  "AuthenticationType": "Jwt", //Jwt|Windows|IISAuthProxyService
-  //"AuthenticationVaildMode": "Database", //Database|LDAP
-  //"LDAPSettings": {
-  //  "DomainName": "ourway.net",
-  //  "BaseDC": "DC=ourway,DC=net"
-  //},
-  //"DataBaseType": "SqlServer",
-  //"EnableRedisCache": "false",
+  "AuthenticationType": "Jwt", //Jwt|Windows|IISAuthProxyService *Environment
+  "AuthenticationVaildMode": "Database", //Database|LDAP|Debug *Environment *使用Jwt认证时用户较验模式
+  "DataBaseType": "SqlServer", //SqlServer|MySql|Oracle|Sqlite|Memory *Environment
+  "EnableRedisCache": "false", //false|true
   "ConnectionStrings": {
-    //"RedisConnectionString": "k8s.chenyinxin.com:31087",
-    "DataBaseConnectionString": "Server=.;Initial Catalog={{cookiecutter.project_name}};User ID=sa;Password=p@ssw0rd@123",
+    //"RedisConnectionString": "k8s.chenyinxin.com:31087", // *Environment
+    "DataBaseConnectionString": "Server=.;Initial Catalog={{cookiecutter.project_name}};User ID=sa;Password=p@ssw0rd@123", // *Environment
     "SSOConnectionString": "Server=.;Initial Catalog=PRJNEW;User ID=sa;Password=p@ssw0rd@123"
   },
   "JwtSettings": {
+    "SecretKey": "of.jwt.secret.2019", // *Environment
     "Issuer": "ourway.issuer.framework",
-    "Audience": "ourway.audience.framework",
-    "SecretKey": "of.jwt.secret.2019"
+    "Audience": "ourway.audience.framework"
   },
   "IISAuthProxySettings": {
     "AppId": "one",
     "AppSecret": "abcd1234",
     "LoginUrl": "http://api.chenyinxin.cn/ad/authorize?appid=one&redirect_uri=%2fad%2fdecrypt%3fappid%3done"
+  },
+  "LDAPSettings": {
+    "DomainName": "ourway.net",
+    "BaseDC": "DC=ourway,DC=net"
   },
   "IoCSettings": {
     "OF.IoC.Many": ".*EntityBase.*", //需要多个实现匹配正则
