--- a/{{cookiecutter.project_name}}/NetCore/Shell/OF.WebShell/log4net.config
+++ b/{{cookiecutter.project_name}}/NetCore/Shell/OF.WebShell/log4net.config
@@ -10,7 +10,15 @@
       <appender-ref ref="InfoRollingFileAppender"/>
       <appender-ref ref="ErrorRollingFileAppender"/>
       <appender-ref ref="DebugRollingFileAppender"/>
+      <appender-ref ref="ConsoleAppender"/>
     </root>
+    
+    <!--输出到控制台-->
+    <appender name="ConsoleAppender" type="log4net.Appender.ConsoleAppender,log4net">
+      <layout type="log4net.Layout.PatternLayout">
+        <param name="ConversionPattern" value="%d [%t] %-5p %c [%x] - %m%n" />
+      </layout>
+    </appender>
 
     <!--致命错误日志定义，用于收集未处理的异常-->
     <!--日志输出格式：[时间]：类名 线程号 消息-->
@@ -101,5 +109,6 @@
         <conversionPattern value="*——*——*——*——*——*——Begin——*——*——*——*——*——*&#13;&#10;记录时间：%d%n日志类型：%c%n%m%n*——*——*——*——*——*——E n d——*——*——*——*——*——*&#13;&#10;" />
       </layout>
     </appender>
+    
   </log4net>
 </configuration>
